--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-react": "^2.1.7",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "aws-amplify": "^4.3.12",
     "bootstrap": "^5.1.3",
     "konva": "^8.3.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-konva": "^17.0.2-5",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "use-image": "^1.0.8",
     "web-vitals": "^2.1.2"
